# BattleRoyale

./: .gitignore  CMakeLists.txt  README.md
BRWC_1.0_Win_x64/: README.md  imgui.ini
Website/: BRWC_Page.html  index.html
resources/: GameLevel.json  GameLevel_01.json  GameLevel_02.json  GameLevel_03.json  GameLevel_03_noRoof.json  GameLevel_Basic.json  bounder_frag.glsl  bounder_vert.glsl  capTest.json  diffuse_frag.glsl  diffuse_vert.glsl  health_frag.glsl  health_vert.glsl  map.txt  particle_frag.glsl  particle_vert.glsl  pass_vert.glsl  postprocess_frag.glsl  postprocess_vert.glsl  ray_frag.glsl  ray_vert.glsl  shadow_frag.glsl  shadow_vert.glsl  smallMap.txt  square_frag.glsl  square_vert.glsl  test.json
resources/soundeffects/: end_wave2.flac  filesinfolder.txt  listfilesinfolder.py
src/: imgui.ini  main.cpp
src/App/: Enemies.cpp  Enemies.hpp  Game.cpp  Game.hpp  Lighting.cpp  Lighting.hpp  Player.cpp  Player.hpp  Weapons.cpp  Weapons.hpp  main.cpp
src/Context/: Context.cpp  Context.hpp
src/Engine/: Engine.hpp
src/Engine/Collision/: CollisionComponent.hpp  CollisionSystem.cpp  CollisionSystem.hpp
src/Engine/Component/: Component.cpp  Component.hpp  Components.hpp
src/Engine/Component/CameraComponents/: CameraComponent.cpp  CameraComponent.hpp  CameraController.cpp  CameraController.hpp  CameraControllerComponent.cpp  CameraControllerComponent.hpp
src/Engine/Component/Collision/: CollisionComponent.hpp
src/Engine/Component/CollisionComponents/: BounderComponent.cpp  BounderComponent.hpp  CollisionComponent.cpp  CollisionComponent.hpp
src/Engine/Component/EnemyComponents/: EnemyComponent.cpp  EnemyComponent.hpp
src/Engine/Component/ImGuiComponents/: ImGuiComponent.cpp  ImGuiComponent.hpp
src/Engine/Component/MapExploreComponents/: MapExploreComponent.cpp  MapExploreComponent.hpp
src/Engine/Component/ParticleComponents/: Particle.cpp  Particle.hpp  ParticleAssasinComponent.hpp  ParticleComponent.cpp  ParticleComponent.hpp  ParticleEffect.cpp  ParticleEffect.hpp
src/Engine/Component/PathfindingComponents/: PathfindingComponent.cpp  PathfindingComponent.hpp
src/Engine/Component/PlayerComponents/: PlayerComponent.cpp  PlayerComponent.hpp  PlayerControllerComponent.cpp  PlayerControllerComponent.hpp
src/Engine/Component/PostCollisionComponents/: GroundComponent.cpp  GroundComponent.hpp
src/Engine/Component/ProjectileComponents/: ProjectileComponent.cpp  ProjectileComponent.hpp
src/Engine/Component/RenderComponents/: DiffuseRenderComponent.cpp  DiffuseRenderComponent.hpp  DiffuseRenderableComponent.hpp  MeshComponent.hpp  ModelTextureComponent.hpp  ParticleRenderComponent.hpp
src/Engine/Component/SpatialComponents/: Scaleable.cpp  (+11 more)
src/Engine/EngineApp/: EngineApp.cpp  EngineApp.hpp
src/Engine/GLFWWrapper/: Window.cpp  Window.hpp
src/Engine/GLSL/: GLSL.cpp  GLSL.hpp
src/Engine/GameObject/: GameObjec.cpp  GameObject.cpp  GameObject.hpp  Message.hpp  Transform.cpp  Transform.hpp
src/Engine/IO/: Keyboard.cpp  Keyboard.hpp  Mouse.cpp  Mouse.hpp  Window.cpp  Window.hpp
src/Engine/LevelBuilder/: FileReader.cpp  FileReader.hpp
src/Engine/Loader/: FileReader.cpp  FileReader.hpp  Library.cpp  Library.hpp  Loader.cpp  Loader.hpp
src/Engine/Model/: Material.hpp  Mesh.hpp  ModelTexture.hpp  Texture.hpp
src/Engine/ParticleEffect/: Particle.cpp  Particle.hpp  ParticleEffect.cpp  ParticleEffect.hpp
src/Engine/Scene/: Scene.cpp  Scene.hpp
src/Engine/Shaders/: BlurShader.cpp  BlurShader.hpp  BounderShader.cpp  BounderShader.hpp  DiffuseShader.cpp  DiffuseShader.hpp  GLSL.cpp  GLSL.hpp  HealthShader.cpp  HealthShader.hpp  OctreeShader.cpp  OctreeShader.hpp  ParticleShader.cpp  ParticleShader.hpp  PostProcessShader.cpp  PostProcessShader.hpp  RayShader.cpp  RayShader.hpp  Shader.cpp  Shader.hpp  Shaders.hpp  ShadowDepthShader.cpp  ShadowDepthShader.hpp  SquareShader.cpp  SquareShader.hpp
src/Engine/Sound/: SoundComponent.cpp  SoundComponent.hpp
src/Engine/System/: CollisionSystem.cpp  CollisionSystem.hpp  EnemySystem.cpp  EnemySystem.hpp  GameInterface.cpp  GameInterface.hpp  GameLogicSystem.cpp  GameLogicSystem.hpp  GameSystem.cpp  GameSystem.hpp  MapExploreSystem.cpp  MapExploreSystem.hpp  ParticleSystem.cpp  ParticleSystem.hpp  PathfindingSystem.cpp  PathfindingSystem.hpp  PostCollisionSystem.cpp  PostCollisionSystem.hpp  RenderSystem.cpp  RenderSystem.hpp  SoundSystem.cpp  SoundSystem.h  SoundSystem.hpp  SpatialSystem.cpp  SpatialSystem.hpp  StatsSystem.cpp  StatsSystem.hpp  System.cpp  System.hpp  Systems.hpp
src/Engine/Toolbox/: Loader.cpp  Loader.hpp
src/Engine/Util/: Depot.hpp  Geometry.cpp  Geometry.hpp  Memory.cpp  Memory.hpp  Octree.hpp  Octree.tpp  Util.cpp  Util.hpp
src/Entity/: Enemy.cpp  Enemy.hpp  Entity.hpp
src/Renderer/: MasterRenderer.cpp  MasterRenderer.hpp
src/Toolbox/: Loader.cpp
src/World/: World.hpp
src/World/TutorialWorld/: TutorialWorld.cpp  TutorialWorld.hpp
(+35 files in other folders)
